--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=""
 
-spring.datasource.url=${env.DATABASE_URL}
-spring.datasource.username=${env.DATABASE_USER}
-spring.datasource.password=${env.DATABASE_PASSWORD}
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.application.name=DEPARTMENT-SERVICE
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
