--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=API-GATEWAY
 server.port=9191
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.include=*
+spring.zipkin.base-url=http://127.0.0.1:9411/
+management.tracing.sampling.probability=1.0
 
 ## Routes for Employee Service
 spring.cloud.gateway.routes[0].id=EMPLOYEE-SERVICE
@@ -12,3 +14,9 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
 spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
+
+## Routes for Organization Service
+spring.cloud.gateway.routes[2].id=ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].uri=lb://ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
+
