--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.password=""
 spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 management.endpoints.web.exposure.include=*
+spring.zipkin.base-url=http://127.0.0.1:9411/
+management.tracing.sampling.probability=1.0
