--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -3,3 +3,17 @@ spring.datasource.password=""
 spring.application.name=EMPLOYEE-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 management.endpoints.web.exposure.include=*
+spring.zipkin.base-url=http://127.0.0.1:9411/
+management.tracing.sampling.probability=1.0
+
+management.health.circuitbreakers.enabled=true
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowType=COUNT_BASED
